@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-07-03  Michael Jahn
+	* updated IMDb plugin
+
 ---- 0.10-beta3 ----
 
 2009-06-11  Piotr Ożarowski
